Fix experience overlap

--- a/src/styles/stylesheets/experiences.scss
+++ b/src/styles/stylesheets/experiences.scss
@@ -29,7 +29,7 @@
         
         .job-info {
             display: grid;
-            grid-template-rows: 40px 28px 28px 36px auto;
+            grid-row-gap: 8px;
             
             .job-company {                
                 line-height: 1.45;
